# Anchor-Security-Prep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  vercel.json
.github/ISSUE_TEMPLATE/: false-positive.yml  rule-request.yml
.github/action/: action.yml
.github/workflows/: ci.yml  release.yml
app/: layout.tsx  page.tsx
app/compare/: CompareClient.tsx  layout.tsx  page.tsx
app/integrations/: page.tsx
app/m1/: page.tsx
app/m2/: page.tsx
app/reviewer/: page.tsx
app/rules/: page.tsx
app/scan/: layout.tsx  page.tsx
cli/: Cargo.toml
cli/src/: config.rs  fixtures_test.rs  main.rs  rule_catalog.rs  rules.rs  rules_extra.rs  sarif.rs  scanner.rs  types.rs
components/: CodeDiff.tsx  CopyButton.tsx  DemoImpactBanner.tsx  DemoModeBanner.tsx  FindingCard.tsx  Footer.tsx  GrantPathStepper.tsx  MilestoneView.tsx  Navbar.tsx  NextStepCta.tsx  PageHeader.tsx  RulesCatalog.tsx  SummaryCards.tsx  TrustStrip.tsx
docs/: APPLICATION.md  BENCHMARK.md  BENCHMARK_RESULTS.md  BETA.md  CONTRIBUTING.md  EXPLOITS.md  GOOGLE_DOC_PROPOSAL.md  GRANT.md  INCIDENTS.md  REVIEWER.md  SCREENSHOTS.md  VERCEL.md  schema.md
examples/clean-program/: Anchor.toml
examples/vulnerable-program/: Anchor.toml
fixtures/asp001/: bad.rs
fixtures/asp002/: bad.rs
fixtures/asp003/: bad.rs
lib/: demo-impact.ts  demo-routes.ts  documented-rules.ts  fixture-coverage.ts  incidents.ts  milestones.ts  sample-stats.ts  static-data.ts  store.ts  types.ts  validate.ts
templates/: anchor-prep.yml
web/: .gitignore  package-lock.json  package.json
(+51 files in other folders)
