[package]
name = "anchor-prep"
version = "0.2.0"
edition = "2021"
description = "Pre-audit static security scanner for Anchor/Solana programs"
license = "MIT"

[[bin]]
name = "anchor-prep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
